# white_hat_stoat

./: .dockerignore  .env.example  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile.txt  Makefile.txt  README.md  conftest.py  docker-compose.yml  entrypoint.sh  install.bat  install.ps1  install.sh  pyproject.toml  requirements-dev.txt  requirements-extra.txt  requirements.txt  setup.py  test_core.py  white_hat_stoat.py
